# codex

./: AGENTS.md  AGENTS.override.md  MODULE.bazel  defs.bzl  justfile  workspace_root_test_launcher.bat.tpl
codex-rs/: BUILD.bazel  Cargo.toml  config.md  deny.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-daemon/src/: lib.rs
codex-rs/app-server-protocol/src/: export.rs  lib.rs  schema_fixtures.rs
codex-rs/app-server-test-client/: README.md
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server-transport/src/: outgoing_message.rs
codex-rs/app-server/src/: app_info.rs  bespoke_event_handling.rs  command_exec.rs  config_manager_service.rs  config_manager_service_tests.rs  dynamic_tools.rs  effective_plugin_change.rs  effective_plugin_change_tests.rs  extensions.rs  in_process.rs  lib.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  models_refresh_worker.rs  models_refresh_worker_tests.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
codex-rs/backend-client/src/: client.rs
codex-rs/chatgpt/src/: chatgpt_client.rs  connectors.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cli/e2e_benches/: codex_help.rs
codex-rs/cli/src/: app_cmd.rs  doctor.rs  main.rs
codex-rs/cli/tests/: debug_clear_memories.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode-protocol/src/: description.rs  response.rs
codex-rs/code-mode/src/: remote_session.rs  remote_session_tests.rs  service.rs  service_tests.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs  common.rs  files.rs  lib.rs  rate_limits.rs  search.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: codex_apps.rs  connection_manager.rs  connection_manager_tests.rs  elicitation.rs  lib.rs  openai_docs_source_attribution.rs  openai_docs_source_attribution_tests.rs  resource_client.rs  rmcp_client.rs  runtime.rs  tool_catalog_cache.rs  tools.rs
codex-rs/config/src/: config_requirements.rs  config_toml.rs  hook_config.rs  hooks_tests.rs  key_aliases.rs  merge_tests.rs  permissions_toml.rs  thread_config.rs  types.rs
codex-rs/connectors/: Cargo.toml
codex-rs/connectors/src/: app_tool_policy.rs  directory_cache.rs  lib.rs  metadata_store.rs  metadata_store_tests.rs  runtime_projection.rs  runtime_projection_tests.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  config.schema.json
codex-rs/core-api/: Cargo.toml
codex-rs/core-api/src/: lib.rs
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: command_migration.rs  command_migration_tests.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  manifest.rs  marketplace.rs  marketplace_tests.rs  provider.rs  remote.rs  remote_bundle.rs  remote_tests.rs  startup_sync.rs  startup_sync_tests.rs  store.rs  tool_suggest_metadata.rs
codex-rs/core-skills/src/: config_rules.rs  injection.rs  loader.rs  loader_tests.rs  model.rs  root_loader.rs  service.rs
codex-rs/core-skills/tests/: environment_loader.rs
codex-rs/core/src/: agents_md.rs  agents_md_manager.rs  agents_md_tests.rs  audio_preparation.rs  audio_preparation_tests.rs  client.rs  client_tests.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_thread.rs  compact.rs  compact_model_fallback.rs  compact_remote.rs  compact_remote_request.rs  compact_remote_v2.rs  compact_remote_v2_attempt.rs  compact_tests.rs  compact_token_budget.rs  connectors.rs  connectors_tests.rs  environment_selection.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_policy.rs  exec_policy_tests.rs  hook_runtime.rs  lib.rs  mcp.rs  mcp_openai_file.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  mcp_tool_exposure.rs  mcp_tool_exposure_test.rs  memory_usage.rs  otel_init.rs  prompt_debug.rs  realtime_context.rs  realtime_conversation.rs  realtime_conversation_tests.rs  (+17 more)
codex-rs/core/tests/: responses_headers.rs
codex-rs/exec-server/: BUILD.bazel
codex-rs/exec-server-protocol/: Cargo.toml
codex-rs/exec-server-protocol/src/: protocol.rs  rpc.rs  rpc_tests.rs
codex-rs/exec-server/src/: capability_discovery.rs  capability_discovery_cache.rs  client.rs  client_api.rs  client_recovery.rs  client_recovery_tests.rs  client_transport.rs  connection.rs  environment.rs  environment_provider.rs  environment_toml.rs  fs_sandbox.rs  lib.rs  local_process.rs  process_sandbox.rs  process_sandbox_tests.rs  resolved_capability.rs  rpc.rs
codex-rs/exec-server/tests/: capability_discovery.rs  deferred_environment.rs  environment.rs  exec_process.rs  file_system_unix.rs  health.rs  http_client.rs  relay.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  lib_tests.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/execpolicy/: Cargo.toml  README.md
codex-rs/execpolicy/src/: lib.rs  sandbox_migration.rs  sandbox_migration_tests.rs
codex-rs/ext/agent/: BUILD.bazel  Cargo.toml
codex-rs/ext/connectors/: Cargo.toml
codex-rs/ext/extension-api/: Cargo.toml
codex-rs/ext/image-generation/: imagegen_description.md
codex-rs/ext/items/: Cargo.toml
codex-rs/ext/mcp/: Cargo.toml
codex-rs/ext/skills/: Cargo.toml
codex-rs/external-agent-migration/: Cargo.toml
codex-rs/http-client/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/models-manager/: Cargo.toml  models.json
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/sandboxing/: Cargo.toml
codex-rs/skills/: Cargo.toml
codex-rs/state/: BUILD.bazel  Cargo.toml
codex-rs/thread-store/: Cargo.toml
codex-rs/tui/: Cargo.toml  tooltips.txt
codex-rs/websocket-client/: BUILD.bazel  Cargo.toml
(+1271 files in other folders)
