exports_files([
    "clippy.toml",
])

filegroup(
    name = "workspace-files",
    srcs = glob(
        [
            "*",
            ".cargo/**",
        ],
        exclude = [
            "BUILD.bazel",
        ],
    ),
    visibility = ["//visibility:public"],
)

test_suite(
    name = "e2e-benchmarks",
    tags = ["manual"],
    tests = [
        "//codex-rs/cli:codex-help-bench",
    ],
    visibility = ["//visibility:public"],
)
