load("//:defs.bzl", "MACOS_WEBRTC_RUSTC_LINK_FLAGS", "codex_rust_crate")
load("//bazel/platforms:release_binaries.bzl", "multiplatform_binaries")
load("//bazel/rules:e2e_benchmark.bzl", "codex_e2e_benchmark")

codex_rust_crate(
    name = "cli",
    crate_name = "codex_cli",
    extra_binaries = [
        "//codex-rs/bwrap:bwrap",
    ],
    rustc_flags_extra = MACOS_WEBRTC_RUSTC_LINK_FLAGS,
)

multiplatform_binaries(
    name = "codex",
)

codex_e2e_benchmark(
    name = "codex-help",
    binaries = [":codex"],
)
