[package]
name = "codex-exec-server-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_exec_server_protocol"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
codex-file-system = { workspace = true }
codex-network-proxy = { workspace = true }
codex-protocol = { workspace = true }
codex-shell-command = { workspace = true }
codex-utils-path-uri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision", "raw_value"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
