load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "state",
    compile_data = glob([
        "goals_migrations/**",
        "logs_migrations/**",
        "memory_migrations/**",
        "migrations/**",
        "thread_history_migrations/**",
    ]),
    crate_name = "codex_state",
)
