[package]
edition.workspace = true
license.workspace = true
name = "codex-agent-extension"
version.workspace = true

[lib]
name = "codex_agent_extension"
path = "src/lib.rs"
doctest = false
test = false

[lints]
workspace = true

[dependencies]
codex-core = { workspace = true }
codex-protocol = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
core_test_support = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
