[package]
edition.workspace = true
license.workspace = true
name = "codex-extension-items"
version.workspace = true

[lib]
name = "codex_extension_items"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-utils-absolute-path = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
